--- a/volleyex/app/src/main/AndroidManifest.xml
+++ b/volleyex/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".SeparateActivity">
-    </activity>
+
+    <activity android:name=".SeparateActivity"></activity>
+    <activity android:name=".SemiSeparateActivity"></activity>
   </application>
 
 </manifest>
