--- a/GitRepoViewer/local/test/Makefile
+++ b/GitRepoViewer/local/test/Makefile
@@ -5,11 +5,14 @@ TEST_SRC= $(PKG_PATH)/domain/test/RepositoryTest.java
 "          $(PKG_PATH)/util/test/JsonParserTest.java \
 
 ANDROID_DIR=../../app/src/main/java/
-ANDROID_STUBS_DIR=android
+ANDROID_STUBS_DIR=android/android-stubs-master
 ORG_JSON=org.json.jar
 TEST_CLASSES=$(TEST_SRC:%.java=%.class)
 TEST_CLASS_NAMES=$(shell echo $(TEST_CLASSES) | sed -e 's,\.class,,g' -e 's,/,\.,g')
 CLASSPATH=$(ANDROID_STUBS_DIR):$(ANDROID_DIR):$(ORG_JSON):.
+
+
+ANDROID_LOG=$(ANDROID_STUBS_DIR)/android/util/Log.java
 
 
 %.class:%.java
@@ -17,7 +20,7 @@ CLASSPATH=$(ANDROID_STUBS_DIR):$(ANDROID_DIR):$(ORG_JSON):.
 	javac -cp $(CLASSPATH) $<
 
 
-all: $(TEST_CLASSES)
+all: $(TEST_CLASSES) $(ANDROID_LOG)
 
 check: all
 	@echo " ---=== Test all classes ===---"
@@ -26,6 +29,12 @@ check: all
 clean:
 	@echo " ---=== Cleaning up ===---"
 	rm -fr $(TEST_CLASSES)
+	-find . -name "*~" | xargs rm -f 
+
+$(ANDROID_LOG):
+	mkdir -p android
+	wget https://github.com/progund/android-stubs/archive/master.zip
+	cd android && unzip ../master.zip
 
 info:
 	@echo "Test files:                $(TEST_SRC)"
